Backend-Writing weather data to RDS #24

--- a/weatherapi.ipynb
+++ b/weatherapi.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "ad474006",
    "metadata": {
     "scrolled": true
@@ -230,7 +230,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5.3, 6.7, 1.8, 2.1, 2.9, 0.7, -0.4]\n"
+      "2023-03-01 21:10:15,039 INFO sqlalchemy.engine.Engine insert into weather values(%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s)\n",
+      "2023-03-01 21:10:15,041 INFO sqlalchemy.engine.Engine [raw sql] (42, 1677693600, 7.8, 2, 17.6, '[1677693600, 1677697200, 1677700800, 1677704400, 1677708000, 1677711600, 1677715200, 1677718800, 1677722400, 1677726000, 1677729600, 1677733200]', '[7.8, 7.5, 7.9, 7.9, 7.8, 7.5, 7.1, 7.1, 7.2, 7.3, 6.9, 7.1]', '[0, 0, 0, 0, 8, 15, 23, 33, 42, 52, 45, 39]', '[2, 3, 3, 51, 51, 51, 51, 51, 51, 2, 1, 1]', '[17.6, 16.0, 17.9, 18.9, 17.9, 17.4, 16.6, 16.6, 15.1, 14.4, 11.3, 12.4]', '[1677628800, 1677715200, 1677801600, 1677888000, 1677974400, 1678060800, 1678147200]', '[51, 51, 3, 3, 3, 80, 3]', '[8.6, 8.2, 7.8, 7.5, 8.7, 6.0, 6.5]', '[5.3, 6.7, 1.8, 2.1, 2.9, 0.7, -0.4]')\n",
+      "2023-03-01 21:10:15,147 INFO sqlalchemy.engine.Engine COMMIT\n"
      ]
     }
    ],
@@ -268,7 +270,7 @@
     "        \n",
     "        # Insert weather data to table \"weather\"        \n",
     "        val = (station, last_update, temperature, weathercode, windspeed, \n",
-    "        str(hourly_time), str(hourly_temp), str(hourly_preci), str(hourly_weathercode), str(hourly_windspeed)\n",
+    "        str(hourly_time), str(hourly_temp), str(hourly_preci), str(hourly_weathercode), str(hourly_windspeed),\n",
     "        str(daily_time),str(daily_weathercode),str(daily_temp_max),str(daily_temp_min))\n",
     "        engine.execute(\"insert into weather values(%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s)\",val)\n",
     "        break\n",
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4a7a645",
+   "id": "e71bc8b1",
    "metadata": {},
    "source": [
     "# BELOW IS TESTING CODE"
@@ -288,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c7a22511",
+   "id": "549666d6",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4be5bdcf",
+   "id": "a4af6a54",
    "metadata": {},
    "outputs": [
     {
