Backend-Writing weather data to RDS #24 24-hour

--- a/weatherapi.ipynb
+++ b/weatherapi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7a17bb52",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "369e3f06",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,127 @@
     "\n",
     "r=requests.get(STATIONS_URL,params={\"apiKey\":APIKEY,\"contract\":NAME})\n",
     "stations=json.loads(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0e07e7e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WEATHER_URL=\"https://api.open-meteo.com/v1/forecast\"\n",
+    "HOURLY=\"temperature_2m\",\"precipitation_probability\",\"weathercode\",\"windspeed_10m\"\n",
+    "TIMEZONE=\"Europe/London\"\n",
+    "DAILY=\"weathercode\",\"temperature_2m_max\",\"temperature_2m_min\"\n",
+    "weather_station = {}\n",
+    "\n",
+    "for station in stations:\n",
+    "    LATITUDE = station['position']['lat']\n",
+    "    LONGITUDE = station['position']['lng']\n",
+    "    weather=requests.get(WEATHER_URL,params={\"latitude\":LATITUDE,\"longitude\":LONGITUDE,\"hourly\":HOURLY,\n",
+    "    \"daily\":DAILY,\"current_weather\":\"true\",\"timeformat\":\"unixtime\",\"timezone\":TIMEZONE})\n",
+    "    weather_dict=json.loads(weather.text)\n",
+    "    weather_station[station['number']]=weather_dict\n",
+    "# pprint(weather_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a89b3014",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "import glob\n",
+    "import os\n",
+    "from pprint import pprint\n",
+    "import simplejson as json\n",
+    "import requests\n",
+    "from IPython.display import display\n",
+    "\n",
+    "URI = \"dbbikes.c06rsktpo8sk.us-east-1.rds.amazonaws.com\"\n",
+    "PORT = \"3306\"\n",
+    "DB = \"dbbikes\"\n",
+    "USER = \"minhly\"\n",
+    "PASSWORD = \"22201371\"\n",
+    "engine = create_engine(\"mysql://{}:{}@{}:{}/{}\".format(USER, PASSWORD, URI, PORT, DB), echo=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ad474006",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-03-02 17:31:55,907 INFO sqlalchemy.engine.Engine SELECT DATABASE()\n",
+      "2023-03-02 17:31:55,913 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-03-02 17:31:56,258 INFO sqlalchemy.engine.Engine SELECT @@sql_mode\n",
+      "2023-03-02 17:31:56,259 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-03-02 17:31:56,359 INFO sqlalchemy.engine.Engine SELECT @@lower_case_table_names\n",
+      "2023-03-02 17:31:56,360 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-03-02 17:31:56,561 INFO sqlalchemy.engine.Engine insert into weather values(%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s)\n",
+      "2023-03-02 17:31:56,563 INFO sqlalchemy.engine.Engine [raw sql] (42, 1677776400, 8.3, 3, 10.3, '[1677776400, 1677780000, 1677783600, 1677787200, 1677790800, 1677794400, 1677798000, 1677801600, 1677805200, 1677808800, 1677812400, 1677816000, 1677819600, 1677823200, 1677826800, 1677830400, 1677834000, 1677837600, 1677841200, 1677844800, 1677848400, 1677852000, 1677855600, 1677859200]', '[8.3, 7.7, 7.3, 6.6, 5.9, 6.1, 6.1, 7.0, 6.6, 5.3, 4.9, 4.4, 2.7, 2.1, 2.8, 3.4, 4.5, 6.2, 7.6, 8.0, 8.4, 8.3, 8.1, 7.9]', '[2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]', '[3, 3, 2, 1, 2, 1, 2, 3, 2, 2, 1, 1, 0, 0, 1, 3, 3, 3, 3, 51, 2, 2, 2, 2]', '[10.3, 9.8, 8.9, 6.9, 5.2, 5.1, 5.7, 8.1, 8.0, 6.1, 5.1, 3.0, 4.7, 5.4, 6.1, 4.3, 2.9, 3.0, 4.5, 8.6, 12.0, 11.8, 12.2, 11.2]', '[1677715200, 1677801600, 1677888000, 1677974400, 1678060800, 1678147200, 1678233600]', '[51, 51, 51, 53, 80, 2, 3]', '[8.8, 8.4, 7.1, 7.9, 7.9, 5.2, 5.2]', '[5.9, 2.1, 3.5, 2.5, 2.0, -0.8, -0.8]')\n",
+      "2023-03-02 17:31:56,661 INFO sqlalchemy.engine.Engine COMMIT\n"
+     ]
+    }
+   ],
+   "source": [
+    "def weather_to_db():\n",
+    "    for station in weather_station:\n",
+    "        \n",
+    "         # Getting current weather data once every hour: \n",
+    "        last_update = weather_station.get(station).get('current_weather').get('time')\n",
+    "        temperature = weather_station.get(station).get('current_weather').get('temperature')\n",
+    "        weathercode = weather_station.get(station).get('current_weather').get('weathercode')\n",
+    "        windspeed = weather_station.get(station).get('current_weather').get('windspeed')\n",
+    "\n",
+    "        # Getting hourly weather forecast data for the next 12 hours only:\n",
+    "        hourly_time_full = weather_station.get(station).get('hourly').get('time')\n",
+    "        hourly_time = []\n",
+    "        hourly_temp = []\n",
+    "        hourly_preci = []\n",
+    "        hourly_weathercode = []\n",
+    "        hourly_windspeed = []\n",
+    "        i = hourly_time_full.index(last_update)\n",
+    "\n",
+    "        for j in range(i,i+24):\n",
+    "            hourly_time.append(hourly_time_full[j])\n",
+    "            hourly_temp.append(weather_station.get(station).get('hourly').get('temperature_2m')[j])\n",
+    "            hourly_preci.append(weather_station.get(station).get('hourly').get('precipitation_probability')[j])\n",
+    "            hourly_weathercode.append(weather_station.get(station).get('hourly').get('weathercode')[j])\n",
+    "            hourly_windspeed.append(weather_station.get(station).get('hourly').get('windspeed_10m')[j])\n",
+    "        \n",
+    "        # Geting weather forecast data for 7 days\n",
+    "        daily_time = weather_station.get(station).get('daily').get('time')\n",
+    "        daily_weathercode = weather_station.get(station).get('daily').get('weathercode')\n",
+    "        daily_temp_max=weather_station.get(station).get('daily').get('temperature_2m_max')\n",
+    "        daily_temp_min=weather_station.get(station).get('daily').get('temperature_2m_min')\n",
+    "        \n",
+    "        # Insert weather data to table \"weather\"        \n",
+    "        val = (station, last_update, temperature, weathercode, windspeed, \n",
+    "        str(hourly_time), str(hourly_temp), str(hourly_preci), str(hourly_weathercode), str(hourly_windspeed),\n",
+    "        str(daily_time),str(daily_weathercode),str(daily_temp_max),str(daily_temp_min))\n",
+    "        engine.execute(\"insert into weather values(%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s)\",val)\n",
+    "        break\n",
+    "    return\n",
+    "\n",
+    "weather_to_db()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e71bc8b1",
+   "metadata": {},
+   "source": [
+    "# BELOW IS TESTING CODE"
    ]
   },
   {
@@ -170,121 +291,6 @@
    "source": [
     "for station in stations:\n",
     "    print(station['position']['lat'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "0e07e7e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "WEATHER_URL=\"https://api.open-meteo.com/v1/forecast\"\n",
-    "HOURLY=\"temperature_2m\",\"precipitation_probability\",\"weathercode\",\"windspeed_10m\"\n",
-    "TIMEZONE=\"Europe/London\"\n",
-    "DAILY=\"weathercode\",\"temperature_2m_max\",\"temperature_2m_min\"\n",
-    "weather_station = {}\n",
-    "\n",
-    "for station in stations:\n",
-    "    LATITUDE = station['position']['lat']\n",
-    "    LONGITUDE = station['position']['lng']\n",
-    "    weather=requests.get(WEATHER_URL,params={\"latitude\":LATITUDE,\"longitude\":LONGITUDE,\"hourly\":HOURLY,\n",
-    "    \"daily\":DAILY,\"current_weather\":\"true\",\"timeformat\":\"unixtime\",\"timezone\":TIMEZONE})\n",
-    "    weather_dict=json.loads(weather.text)\n",
-    "    weather_station[station['number']]=weather_dict\n",
-    "# pprint(weather_dict)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "a89b3014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sqlalchemy import create_engine\n",
-    "import glob\n",
-    "import os\n",
-    "from pprint import pprint\n",
-    "import simplejson as json\n",
-    "import requests\n",
-    "from IPython.display import display\n",
-    "\n",
-    "URI = \"dbbikes.c06rsktpo8sk.us-east-1.rds.amazonaws.com\"\n",
-    "PORT = \"3306\"\n",
-    "DB = \"dbbikes\"\n",
-    "USER = \"minhly\"\n",
-    "PASSWORD = \"22201371\"\n",
-    "engine = create_engine(\"mysql://{}:{}@{}:{}/{}\".format(USER, PASSWORD, URI, PORT, DB), echo=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "ad474006",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-03-01 21:10:15,039 INFO sqlalchemy.engine.Engine insert into weather values(%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s)\n",
-      "2023-03-01 21:10:15,041 INFO sqlalchemy.engine.Engine [raw sql] (42, 1677693600, 7.8, 2, 17.6, '[1677693600, 1677697200, 1677700800, 1677704400, 1677708000, 1677711600, 1677715200, 1677718800, 1677722400, 1677726000, 1677729600, 1677733200]', '[7.8, 7.5, 7.9, 7.9, 7.8, 7.5, 7.1, 7.1, 7.2, 7.3, 6.9, 7.1]', '[0, 0, 0, 0, 8, 15, 23, 33, 42, 52, 45, 39]', '[2, 3, 3, 51, 51, 51, 51, 51, 51, 2, 1, 1]', '[17.6, 16.0, 17.9, 18.9, 17.9, 17.4, 16.6, 16.6, 15.1, 14.4, 11.3, 12.4]', '[1677628800, 1677715200, 1677801600, 1677888000, 1677974400, 1678060800, 1678147200]', '[51, 51, 3, 3, 3, 80, 3]', '[8.6, 8.2, 7.8, 7.5, 8.7, 6.0, 6.5]', '[5.3, 6.7, 1.8, 2.1, 2.9, 0.7, -0.4]')\n",
-      "2023-03-01 21:10:15,147 INFO sqlalchemy.engine.Engine COMMIT\n"
-     ]
-    }
-   ],
-   "source": [
-    "def weather_to_db():\n",
-    "    for station in weather_station:\n",
-    "        \n",
-    "         # Getting current weather data once every hour: \n",
-    "        last_update = weather_station.get(station).get('current_weather').get('time')\n",
-    "        temperature = weather_station.get(station).get('current_weather').get('temperature')\n",
-    "        weathercode = weather_station.get(station).get('current_weather').get('weathercode')\n",
-    "        windspeed = weather_station.get(station).get('current_weather').get('windspeed')\n",
-    "\n",
-    "        # Getting hourly weather forecast data for the next 12 hours only:\n",
-    "        hourly_time_full = weather_station.get(station).get('hourly').get('time')\n",
-    "        hourly_time = []\n",
-    "        hourly_temp = []\n",
-    "        hourly_preci = []\n",
-    "        hourly_weathercode = []\n",
-    "        hourly_windspeed = []\n",
-    "        i = hourly_time_full.index(last_update)\n",
-    "\n",
-    "        for j in range(i,i+12):\n",
-    "            hourly_time.append(hourly_full[j])\n",
-    "            hourly_temp.append(weather_station.get(station).get('hourly').get('temperature_2m')[j])\n",
-    "            hourly_preci.append(weather_station.get(station).get('hourly').get('precipitation_probability')[j])\n",
-    "            hourly_weathercode.append(weather_station.get(station).get('hourly').get('weathercode')[j])\n",
-    "            hourly_windspeed.append(weather_station.get(station).get('hourly').get('windspeed_10m')[j])\n",
-    "        \n",
-    "        # Geting weather forecast data for 7 days\n",
-    "        daily_time = weather_station.get(station).get('daily').get('time')\n",
-    "        daily_weathercode = weather_station.get(station).get('daily').get('weathercode')\n",
-    "        daily_temp_max=weather_station.get(station).get('daily').get('temperature_2m_max')\n",
-    "        daily_temp_min=weather_station.get(station).get('daily').get('temperature_2m_min')\n",
-    "        \n",
-    "        # Insert weather data to table \"weather\"        \n",
-    "        val = (station, last_update, temperature, weathercode, windspeed, \n",
-    "        str(hourly_time), str(hourly_temp), str(hourly_preci), str(hourly_weathercode), str(hourly_windspeed),\n",
-    "        str(daily_time),str(daily_weathercode),str(daily_temp_max),str(daily_temp_min))\n",
-    "        engine.execute(\"insert into weather values(%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s)\",val)\n",
-    "        break\n",
-    "    return\n",
-    "\n",
-    "weather_to_db()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e71bc8b1",
-   "metadata": {},
-   "source": [
-    "# BELOW IS TESTING CODE"
    ]
   },
   {
@@ -425,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
